--- a/index.html
+++ b/index.html
@@ -3,69 +3,78 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Gaven's Personal Site</title>
+  <title>Gaven Rossdale Echeveria</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="icon" href="icon.ico">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Merriweather&family=Montserrat&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <table cellspacing='20'>
-    <tr>
-      <td><img src="images/Profile.png" alt="Gaven Profile Picture" height="150" width="150"></td>
-      <td>
-        <h1>Gaven Rossdale Echeveria</h1>
-        <p><em><strong>Civil Engineer and Programmer</strong></em></p>
-        <p>I specialize in construction quantity surveying</p>
-      </td>
-    </tr>
-  </table>
+  <div class="top-container">
+    <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+    <h1 class="my-name">I'm Gaven</h1>
+    <h2 style="color: #40514E;">Civil Engineer</h2>
 
-  <hr>
+    <img class="bot-cloud" src="images/cloud.png" alt="cloud-img">
 
-  <h3>Educational Background</h3>
-  <ul>
-    <li>GSIS Heights Elementary School</li>
-    <li>University of the Immaculate Conception</li>
-    <li>University of Southeastern Philippines</li>
-  </ul>
+    <img class="mountain-img" src="images/mountain.png" alt="mountain-img">
 
-  <hr>
+  </div>
 
-  <h3>Work Experience</h3>
+  <div class="mid-container">
+    <div class="profile">
+      <img class="prof-pic" src="images/Profile.png" alt="profile-pic">
+      <h2>Hello.</h2>
 
-  <table cellspacing='10'>
-    <thead>
-      <th>Year</th>
-      <th>Work</th>
-    </thead>
-    <tbody>
-      <tr>
-        <td>2020-2022</td>
-        <td>Quantity Engineer at Ulticon Builders, Inc.</td>
-      </tr>
-      <tr>
-        <td>2022</td>
-        <td>Quantity Surveyor at Makati Development Corporation</td>
-      </tr>
-    </tbody>
-  </table>
+      <p class="intro-text">I am a licensed civil engineer with more than two years of experience working on site. I estimate,
+          manage material requirements, and monitor subcontractor's progress for highway and bridge
+          construction. I am able to handle multiple tasks on a daily basis as I work as a quantity
+          surveyor for land development and high-rise projects.
+      </p>
 
-  <hr>
+    </div>
 
-  <h3>Skills</h3>
-  <table cellspacing='10'>
-    <tr>
-      <td>Python 3</td>
-      <td>★★★★☆</td>
-    </tr>
-    <tr>
-      <td>HTML 5</td>
-      <td>★★★☆☆</td>
-    </tr>
-  </table>
+    <hr>
 
-  <hr>
+    <div class="skills">
+      <h2>My Skills.</h2>
 
-  <a href="Contact Me.html" target="_blank">Contact Me</a>
-  <a href="Hobbies.html" target="_blank">My Hobbies</a>
+      <div class="skill-row">
+        <img class="piano" src="images/piano.png" alt="piano-pic">
+        <h3>Piano</h3>
+        <p>A childhool hobby. I can play few piano pieces.</p>
+      </div>
+
+      <div class="skill-row">
+        <img class="climbing" src="images/climbing.png" alt="climb-pic">
+        <h3>Trekking</h3>
+        <p>I love nature and adventures. Mountain trekking is a challenging endeavor, but the fulfillment for counquering it is priceless. </p>
+      </div>
+
+    </div>
+
+    <hr>
+
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>If love programming as much as I do.</h3>
+      <p class="contact-text">We could drink coffee and discuss topics about software programming and civil engineering.</p>
+      <a href="mailto:gavenfajardo@gmail.com" class="btn">CONTACT ME</a>
+
+    </div>
+  </div>
+
+
+  <div class="bot-container">
+    <a class="footer-link" href="https://web.facebook.com/MiseryMystery">Facebook</a>
+    <a class="footer-link" href="https://twitter.com/realjahrakal">Twitter</a>
+    <a class="footer-link" href="https://www.linkedin.com/in/gaven-rossdale-echeveria-146246234/">LinkedIn</a>
+    <p class="copyright-mark">© 2022 Gaven Rossdale Echeveria</p>
+  </div>
+
+
 </body>
 
 </html>
