--- a/index.html
+++ b/index.html
@@ -1,79 +1,90 @@
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8" />
+    <title>Gaven Rossdale Echeveria</title>
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/bg-gradient.css" />
+    <link rel="icon" href="icon.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Courgette&family=Merriweather&family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <title>Gaven Rossdale Echeveria</title>
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="icon" href="icon.ico">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Merriweather&family=Montserrat&display=swap" rel="stylesheet">
-</head>
+  <body>
+    <div class="top-container">
+      <img class="top-cloud" src="images/cloud.png" alt="cloud-img" />
+      <h1 class="my-name">I'm Gaven</h1>
+      <h2 style="color: #40514e">Civil Engineer</h2>
 
-<body>
-  <div class="top-container">
-    <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
-    <h1 class="my-name">I'm Gaven</h1>
-    <h2 style="color: #40514E;">Civil Engineer</h2>
+      <img class="bot-cloud" src="images/cloud.png" alt="cloud-img" />
 
-    <img class="bot-cloud" src="images/cloud.png" alt="cloud-img">
-
-    <img class="mountain-img" src="images/mountain.png" alt="mountain-img">
-
-  </div>
-
-  <div class="mid-container">
-    <div class="profile">
-      <img class="prof-pic" src="images/Profile.png" alt="profile-pic">
-      <h2>Hello.</h2>
-
-      <p class="intro-text">I am a licensed civil engineer with more than two years of experience working on site. I estimate,
-          manage material requirements, and monitor subcontractor's progress for highway and bridge
-          construction. I am able to handle multiple tasks on a daily basis as I work as a quantity
-          surveyor for land development and high-rise projects.
-      </p>
-
+      <img class="mountain-img" src="images/mountain.png" alt="mountain-img" />
     </div>
 
-    <hr>
+    <div class="mid-container">
+      <div class="profile">
+        <img class="prof-pic" src="images/Profile.png" alt="profile-pic" />
+        <h2>Hello.</h2>
 
-    <div class="skills">
-      <h2>My Skills.</h2>
-
-      <div class="skill-row">
-        <img class="piano" src="images/piano.png" alt="piano-pic">
-        <h3>Piano</h3>
-        <p>A childhool hobby. I can play few piano pieces.</p>
+        <p class="intro-text">
+          I am a civil engineer with multiple years of experience working
+          on-site. I specialize in estimating, managing material requirements,
+          and monitoring subcontractors' progress for highway and bridge
+          construction projects. Additionally, I excel at handling multiple
+          tasks daily, as I also serve as a quantity surveyor for land
+          development and high-rise projects.
+        </p>
       </div>
 
-      <div class="skill-row">
-        <img class="climbing" src="images/climbing.png" alt="climb-pic">
-        <h3>Trekking</h3>
-        <p>I love nature and adventures. Mountain trekking is a challenging endeavor, but the fulfillment for counquering it is priceless. </p>
+      <hr />
+
+      <div class="skills">
+        <h2>My Skills.</h2>
+
+        <div class="skill-row">
+          <img class="piano" src="images/piano.png" alt="piano-pic" />
+          <h3>Piano</h3>
+          <p>A childhool hobby. I can play few piano pieces.</p>
+        </div>
+
+        <div class="skill-row">
+          <img class="climbing" src="images/climbing.png" alt="climb-pic" />
+          <h3>Trekking</h3>
+          <p>
+            I love nature and adventures. Mountain trekking is a challenging
+            endeavor, but the fulfillment for counquering it is priceless.
+          </p>
+        </div>
       </div>
 
+      <hr />
+
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>If love programming as much as I do.</h3>
+        <p class="contact-text">
+          We could drink coffee and discuss topics about software programming
+          and civil engineering.
+        </p>
+        <a href="mailto:gavenfajardo@gmail.com" class="btn">CONTACT ME</a>
+      </div>
     </div>
 
-    <hr>
-
-    <div class="contact-me">
-      <h2>Get In Touch</h2>
-      <h3>If love programming as much as I do.</h3>
-      <p class="contact-text">We could drink coffee and discuss topics about software programming and civil engineering.</p>
-      <a href="mailto:gavenfajardo@gmail.com" class="btn">CONTACT ME</a>
-
+    <div class="bot-container gradient-background">
+      <a class="footer-link" href="https://web.facebook.com/MiseryMystery"
+        >Facebook</a
+      >
+      <a class="footer-link" href="https://twitter.com/realjahrakal">Twitter</a>
+      <a
+        class="footer-link"
+        href="https://www.linkedin.com/in/gaven-rossdale-echeveria-146246234/"
+        >LinkedIn</a
+      >
+      <p class="copyright-mark">© 2024 Gaven Rossdale Echeveria</p>
     </div>
-  </div>
-
-
-  <div class="bot-container">
-    <a class="footer-link" href="https://web.facebook.com/MiseryMystery">Facebook</a>
-    <a class="footer-link" href="https://twitter.com/realjahrakal">Twitter</a>
-    <a class="footer-link" href="https://www.linkedin.com/in/gaven-rossdale-echeveria-146246234/">LinkedIn</a>
-    <p class="copyright-mark">© 2022 Gaven Rossdale Echeveria</p>
-  </div>
-
-
-</body>
-
+  </body>
 </html>
