--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </div>
 
     <div class="bot-container gradient-background">
-      <a class="footer-link" href="https://web.facebook.com/MiseryMystery"
+      <a class="footer-link" href="https://web.facebook.com/MiseryxMachina"
         >Facebook</a
       >
       <a class="footer-link" href="https://twitter.com/realjahrakal">Twitter</a>
