--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
       <div class="contact-me">
         <h2>Get In Touch</h2>
-        <h3>If love programming as much as I do.</h3>
+        <h3>If you love programming as much as I do.</h3>
         <p class="contact-text">
           We could drink coffee and discuss topics about software programming
           and civil engineering.
